# loop-flow

./: .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
loopflow/: __init__.py  models.py  storage.py
loopflow/cli/: __init__.py  main.py
loopflow/loop_detection/: __init__.py  engine.py
tests/: test_cli.py  test_loop_detection.py  test_models.py  test_storage.py
